public/css/style.css
/*----BASIC STUFF----*/

body{
	font-family: 'Roboto', 'sans-serif';
}

footer{
	position: absolute;
	bottom: 0;
	width: 100%;
	box-sizing: border-box;
	z-index: 150;
}

#notifyUser{
	position: absolute;
	bottom: 2em;
	right: 2em;
	z-index: 10;
	background-color: #fff;
}

a:hover {
	text-decoration: none;
	color: gray;
	
}

main{
	margin-top: 2em;
	box-sizing: border-box;
	padding: 0 10% 0 10%;

}
.page-content{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	/*align-items: center;
	align-content: center;*/
	justify-content: center;
}

.flex100{
	flex-basis: 100%;
}
.flex50{
	flex-basis:  50%;
}

.flex45{
	flex-basis: 45%;
}

.width100{
	width: 100%;
}

.width45{
	width: 45%;
}

.tableRow{
	display: flex;
	justify-content: space-around;
}

.tableHead{
	border-bottom: 1px solid gray;
	margin-bottom: 0.5rem;
	font-weight: 600;
}

.form-control {
	
}

.flex-container {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-around;
	/*align-content: space-around;*/
	box-sizing: border-box;
	margin:  0;
	width: 100%;
}
.flex-item {

}

.mdl-button {
   min-width: inherit;
   
}

.marginL{
	margin-left:  1em;
}
/*.signInNav{
	border-left: 1px solid #fff;
}*/

/*----------------*/

/*----BUTTONS----*/

.roundButton{
	position: fixed;
	bottom: 3rem;
	right: 3rem;
	z-index: 200;
}

.formStyle{
	display: flex;
	flex-flow: column wrap;
	width: 100%;
	flex-basis: 100%;
}

.profilePicture{
	/*background-color: blue;*/
	float: right;
	position: absolute;
	right:  1em;
	top: 4em;
	border-radius: 1em;
}

.profileDiv{
	position: relative;
	width:  25%;
}
.slim-container{
	width:  25%;
}
.square100{
	height: 100px;
	width: 100px;
}

.relative{
	position: relative;
}

.knappis{
	position: absolute;
	bottom: -1.7em;
	right:  0.3em;

}

.alertBox{
	width: 100%;
	border-radius: 0.2em;
	box-sizing: border-box;
	padding: 0;
	margin:  1em 0 1em 0;
	
}

.alertRed{
	color: #000;
	font-weight: 700;
	border: 1px solid #F44336;
	background-color: rgba(211, 47, 47, 0.2) ;
}

.alertGreen{
	color: #000;
	font-weight: 700;
	border: 1px solid #8BC34A;
	background-color: rgba(156, 204, 101, 0.2) ;
}

.alertYellow{
	color: #000;
	font-weight: 700;
	border: 1px solid #FFB300;
	background-color: rgba(255, 193, 7, 0.2) ;
}
/*----------------*/


/* TEST FOR Å PRØVE Å FIKSE FOOTER
.mdl-layout__content {
  flex: 1 0 auto;
}

.mdl-mini-footer {
  flex: 0 0 auto;
}*/

